@@ -17,4 +17,22 @@ if (ENABLE_INSPECTOR)
                        PATTERN "*.css"
                        PATTERN "*.gif"
                        PATTERN "*.png")
+
+    find_program(UGLIFYJS_EXECUTABLE uglifyjs)
+    if (UGLIFYJS_EXECUTABLE AND (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug"))
+        file(GLOB frontend_js_files "${WEBCORE_DIR}/inspector/front-end/*.js")
+        set(all_js_files
+            ${frontend_js_files}
+            "${WEBCORE_DIR}/English.lproj/localizedStrings.js"
+            "${DERIVED_SOURCES_WEBCORE_DIR}/InspectorBackendCommands.js"
+        )
+
+        foreach (js_file ${all_js_files})
+            get_filename_component(filename ${js_file} NAME)
+            install(CODE
+                "execute_process(
+                    COMMAND ${UGLIFYJS_EXECUTABLE} --overwrite ${filename}
+                    WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${WEB_INSPECTOR_DIR})")
+        endforeach ()
+    endif ()
 endif ()
